unpackaged/main/default/objects/ffct__ConsultantToolConfigurationSetting__c/ffct__ConsultantToolConfigurationSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Consultant Tool Configuration Setting</label>
</CustomObject>