unpackaged/main/default/objects/ffct__ConsultantToolConfigurationSetting__c/fields/ffct__Chatter__c.field-meta.xml
<CustomField>
    <fullName>ffct__Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chatter Notification</label>
    <type>Checkbox</type>
</CustomField>