unpackaged/main/default/objects/ffct__ConsultantToolConfigurationSetting__c/fields/ffct__MaximumQueueSize__c.field-meta.xml
<CustomField>
    <fullName>ffct__MaximumQueueSize__c</fullName>
    <label>Maximum Queue Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>