unpackaged/main/default/objects/ffct__ConsultantToolConfigurationSetting__c/fields/ffct__Recipients__c.field-meta.xml
<CustomField>
    <fullName>ffct__Recipients__c</fullName>
    <label>Recipients</label>
    <type>TextArea</type>
</CustomField>