unpackaged/main/default/objects/ffct__ConsultantToolConfigurationSetting__c/fields/ffct__Task__c.field-meta.xml
<CustomField>
    <fullName>ffct__Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task Notification</label>
    <type>Checkbox</type>
</CustomField>